sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	for ( i <- 1 to getNombreValeurs() ) { 
		if (plusPetit(i,i-1)) { 
          	echange(i-1,i)
            	i = i-1
          	if ( i == 0 ) { 
               	i = 1 
            	}
         	} else
         		i = i+1
      } 
}
